--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.6",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.3",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
