--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lis-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://luminousis.co",
+  "homepage": "https://lisai.co",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,7 +12,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.3",
